# vibecoding.skill

./: .gitignore  LICENSE  README.md  README_EN.md  SKILL.md  pyproject.toml
assets/prompts/: vibecoding-card.prompt.md
docs/: latest-agent-terms.json  latest-agent-terms.md  latest-agent-terms.prompt.md
examples/: demo_codex_session.jsonl  demo_report.md
portrait_skill/: __init__.py  analyzer.py  cards.py  cli.py  memory.py  models.py  parsers.py  renderer.py  xianxia.py
tests/: test_cli_e2e.py  test_secondary_skill.py
vibecoding_skill/: cards.py  cli.py  distill.py  exporter.py  insights.py  luogu_palette.py  renderer.py  secondary_skill.py  terms.py  themes.py  xianxia.py
