[project]
name = "portrait-skill"
version = "0.1.0"
description = "Analyze Codex, Claude Code, and OpenCode transcripts, then issue cultivation and AI capability certificates."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
portrait-skill = "portrait_skill.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["portrait_skill"]
